Ajustes lançamnto USA 12/02

--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -51,9 +51,9 @@
                         <br>
                         {{ collaborator.address_2 }}
                         {% else %}
-                        Hampton, New Hampshire, 03842
+                        1 Lafayette road, Building 1 - Door E(Loading dock)
                         <br>
-                        Seabrook, NH 03874
+                        Hamptom - NH 03842
                         {% endif %}
                     </p>
                 </div>
