--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -117,39 +117,18 @@
                     </li>
                     {% endif %}
 
+                    <li class="seja-parceiro-menu {% block partner %}{% endblock %}">
+                       <a href="{% url 'user_edit' %}">
+                          <i class="fa fa-street-view"></i> {% trans "Assinar / cancelar plano" %}
+                       </a>
+                    </li>
+                    <li class="{% block storelist %}{% endblock %}">
+                        <a href="{% url 'store' %}" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %}</a>
+                    </li>
 
-
-
-                            <li class="seja-parceiro-menu {% block partner %}{% endblock %}">
-                               <a href="{% url 'user_edit' %}">
-                                  <i class="fa fa-street-view"></i> {% trans "Assinar / cancelar plano" %}
-                               </a>
-                            </li>
-
-
-                        <li class="{% block storelist %}{% endblock %}">
-                            <a href="{% url 'store' %}" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %}</a>
-                        </li>
-
-                        <li class="{% block comoFunciona %}{% endblock %}">
-                            <a href="https://voiservices.com" class=""><i class="fa fa-book"></i> {% trans "Go to website" %}</a>
-                        </li>
-
-                    {% comment %}
-                        {% if LANGUAGE_CODE == 'pt' %}
-                            <li class="{% block faq %}{% endblock %}">
-                                <a href="{% url 'faq' %}" class=""><i class="fa fa-question-circle"></i> {% trans "Perguntas Frequentes" %}</a>
-                            </li>
-                        {% endif %}
-                    {% endcomment %}
-
-                        {% if LANGUAGE_CODE == 'pt' %}
-                            <li class="tutorial">
-                                <a href="{% trans '/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book fa-2x"></i><br /> {% trans "Tutorial Plataforma" %}</a>
-                            </li>
-                            <!-- Novo item com código de usuário -->
-                        {% endif %}
-
+                    <li class="{% block comoFunciona %}{% endblock %}">
+                        <a href="https://voiservices.com" class="" target="_blank"><i class="fa fa-book"></i> {% trans "Go to website" %}</a>
+                    </li>
                     <li>
                         <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> {% trans "Contato" %}</a>
                     </li>
@@ -164,13 +143,10 @@
                         <a href="javascript:void(0);" class="abre-tutorial open-endereco"><i class="fa fa-2x fa-map-marker fa-2x"></i><br /> {% trans "Nosso Endereço" %}</a>
                     </li>
 
-                    {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
+                    <li class="tutorial">
+                        <a href="https://voiservices.com/en/tutorials" target="_blank" class="abre-tutorial"><i class="fa fa-book fa-2x"></i> {% trans "Tutorials" %}</a>
+                    </li>
 
-                            <li class="tutorial">
-                                <a href="{% trans '/en/tutorials' %}" target="_blank" class="abre-tutorial"><i class="fa fa-book fa-2x"></i> {% trans "Tutorials" %}</a>
-                            </li>
-
-                    {% endif %}
 
 {% comment %}
 
@@ -508,8 +484,8 @@
                     <p>{% trans "Diariamente nós recebemos dezenas de caixas na nossa warehouse. Para que possamos agilizar o processo de recebimento, identificação e preparo desses produtos, precisamos saber de forma rápida e ágil de quem é cada caixa a qual chega." %}</p>
                     <p>{% trans "Com isso, criamos o 'Código do usuário'. No momento do seu cadastro, esse código é gerado e enviado para você por email. Você que utiliza nossos serviços de redirecionamento, storage e envia produtos para nós precisa inserir esse código ao lado do seu nome no remetente." %}</p>
                     <p>{% trans "Resumindo, nas suas compras, ao lado do seu nome, insira o seu código de usuário. Caso não seja inserido, nós não conseguiremos identificar seus produtos quando chegarem." %}</p>
-                    <p><strong>Caso a(s) caixa(s) não estejam identificadas com o código de usuário, será cobrada uma taxa de identificação de caixa.</strong></p>
-                    <p>Para maiores informações, <a href="/pt/termos-e-condicoes-de-uso" class="download">leia nossos termos</a></p>
+                    <p><strong>{% trans "Caso a(s) caixa(s) não estejam identificadas com o código de usuário, será cobrada uma taxa de identificação de caixa" %}.</strong></p>
+                    <p>{% blocktrans %}Para maiores informações, <a href="https://voiservices.com/en/terms/" class="download">leia nossos termos{% endblocktrans %}</a></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
@@ -531,7 +507,7 @@
                     <p>{% trans "Veja abaixo nosso endereço:" %}</p>
                     <p>{% trans "1 Lafayette Rd - Building 1, Door E (Loading Dock), Hampton, New Hampshire, 03842" %}</p>
                     <p><strong>{% trans "Não esqueça de colocar o seu código de cliente ao lado do seu nome no from." %}</strong></p>
-                    <p>{% trans "Para maiores informações, <a href='/pt/termos-e-condicoes-de-uso' class='download'>leia nossos termos</a>" %}</p>
+                    <p>{% trans "Para maiores informações, <a href='https://voiservices.com/en/terms/' class='download'>leia nossos termos</a>" %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
@@ -552,7 +528,7 @@
                 <div class="modal-body">
                     <p>{% trans "Olá" %}, {{ user.first_name }}</p>
                     <p>{% trans "Para que possamos realizar o seu envio, através do serviço 'We create your Amazon Shipment', precisamos que ANTES, realize a configuração em sua conta." %}</p>
-                    <p>{% blocktrans %}Veja como: <a class='download' href='https://fbaprepmaster.com/pt/create-az-shipment' target="_blank">https://fbaprepmaster.com/pt/create-az-shipment</a>{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Veja como: <a class='download' href='https://voiservices.com/en/create-az-shipment/' target="_blank">https://voiservices.com/en/create-az-shipment/</a>{% endblocktrans %}</p>
                     <p><strong>{% blocktrans %}Não se esqueça que você precisa também já ter cadastrado os produtos do seu envio em seu estoque na Amazon.{% endblocktrans %}</strong></p>
                     <p><strong>{% trans "Assinantes VOI Prime podem utilizar este serviço sem nenhum custo adicional." %}</strong></p>
                     <div class="panel-group" id="accordion">
