--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -45,8 +45,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <span class="logo-services fr">VOI </span><br>
-                    <span class="logo-services">Services</span>
+                    <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                 </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
@@ -521,7 +520,8 @@
                     </ul>
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="javascript:alert('Conclua seu cadastro antes de assinar um plano')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                         <a class="btn btn-default" href="javascript:alert('Complete your registration before signing a plan')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                         <br><small><strong>* {% trans "Complete your registration before signing a plan" %}</strong></small>
                     </div>
                 </div>
             </div>
@@ -537,7 +537,8 @@
                     </ul>
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="javascript:alert('Conclua seu cadastro antes de assinar um plano')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                         <a class="btn btn-default" href="javascript:alert('Complete your registration before signing a plan')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                        <br><small><strong>* {% trans "Complete your registration before signing a plan" %}</strong></small>
                     </div>
                 </div>
             </div>
