Ajustes lançamnto USA

--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -93,10 +93,11 @@
                     <p class="assinate-span"><span>U$ 74,90</span>/{% trans "mês" %}</p><br>
                     <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Acesso a compra de lotes" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Prioridade na Compra de lotes (Primeiras 24hrs)" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Envio para Amazon em até 3 dias úteis após a compra" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Redirecionamento Grátis" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/lots/how-it-works/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Descontos nos serviços de redirecionamento" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/voi-prime/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
                     {% if is_voiprime is False %}
                     <div class="contem-btn-ass">
@@ -113,7 +114,7 @@
                     <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Criamos seu envio para Amazon para você" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/create-az-shipment/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/create-az-shipment/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
                     {% if is_wcyazs is False %}
                     <div class="contem-btn-ass">
