admin: exportação para csv, um email por linha main: templatetags i18n para uso das traduções store_list: fechado comentário que estava errado user_registration: uso da tag de tradução

--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -250,7 +250,7 @@
                         <div class="rating {{ stars_rating }} ">
                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
-                         <!-- Fim conteúdo novo
+                         <!-- Fim conteúdo novo -->
                         {% endif %}
                           <!-- O vip não aparecerá mais. Agora se for lote amazon, a imgem será /vip-amz.png e se for ebay, /vip-ebay.png
                          {% if lot.destination == 1 %}
