--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -521,8 +521,8 @@
                     </ul>
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-default" href="javascript:alert('Complete your registration before signing a plan')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
-                         <br><small><strong>* {% trans "Complete your registration before signing a plan" %}</strong></small>
+                         <a class="btn btn-default" href="javascript:alert('{% trans 'Complete your registration before subscribing for a plan' %}')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                         <br><small><strong>* {% trans "Complete your registration before subscribing for a plan" %}</strong></small>
                     </div>
                 </div>
             </div>
@@ -538,7 +538,7 @@
                     </ul>
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-default" href="javascript:alert('Complete your registration before signing a plan')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
+                         <a class="btn btn-default" href="javascript:alert('{% trans 'Complete your registration before subscribing for a plan' %}')"><i class="fa fa-fw fa-user-plus"></i> {% trans "Assinar" %}</a>
                         <br><small><strong>* {% trans "Complete your registration before signing a plan" %}</strong></small>
                     </div>
                 </div>
