ajuste do arquivo de traduções.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -487,7 +487,7 @@
                     <p>{% trans "Com isso, criamos o 'Código do usuário'. No momento do seu cadastro, esse código é gerado e enviado para você por email. Você que utiliza nossos serviços de redirecionamento, storage e envia produtos para nós precisa inserir esse código ao lado do seu nome no remetente." %}</p>
                     <p>{% trans "Resumindo, nas suas compras, ao lado do seu nome, insira o seu código de usuário. Caso não seja inserido, nós não conseguiremos identificar seus produtos quando chegarem." %}</p>
                     <p><strong>{% trans "Caso a(s) caixa(s) não estejam identificadas com o código de usuário, será cobrada uma taxa de identificação de caixa" %}.</strong></p>
-                    <p>{% blocktrans %}Para maiores informações, <a href="https://voiservices.com/en/terms/" class="download">leia nossos termos{% endblocktrans %}</a></p>
+                    <p>{% blocktrans %}Para maiores informações, <a href="https://voiservices.com/en/terms/" class="download">leia nossos termos</a>{% endblocktrans %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
