--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -163,7 +163,7 @@
           {% endfor %}
           <div class="row">
             <button class="btn btn-primary filtar-btn alterar-status" id="send-btn" type="submit"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
-            <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br><br>
+            <a href="javascript:history.back()"><i class="fas fa-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br><br>
            </div>
         </form>
           </div>
