--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -32,7 +32,7 @@
                             <p class="p42 bold">Amazon</p>
                             <p class="p42 bold">Ebay</p>
                             <p class="p42 bold">{% trans "Ou para seu Ecommerce" %}</p>
-                            <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans " ASSINAR AGORA" %}</a>
+                            <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans "ASSINAR AGORA" %}</a>
                         </div>
                         <div class="col-m col-right">
                             <img src="/static/img/box-cardboard.png" style="width: 31%; margin: 66px 0 0 0;" />
@@ -45,7 +45,7 @@
                             <p class="p55 bold">{% trans "Lotes" %}</p>
                             <p class="p42">{% trans "Todas as Quartas e Sextas" %}</p>
                             <p class="p42">{% trans "Às 21:30" %}</p>
-                            <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans " ASSINAR AGORA" %}</a>
+                            <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans "ASSINAR AGORA" %}</a>
                         </div>
                         <div class="col-m col-right">
                             <img src="/static/img/boxes.jpg" class="img-margin" />
@@ -65,7 +65,7 @@
                     </div>
                     <div class="item">
                         <div class="col-m col-right">
-                            <img src="/static/img/boxes-2.png" class="margin-40" width="35%" />
+                            <img src="/static/img/boxes-2.png" class="margin-40" width="30%" />
                             <img src="/static/img/boxes-2.png" class="margin-40" width="35%" />
                         </div>
                         <div class="col-m col-left">
@@ -181,16 +181,16 @@
                         <div class="col-schedule">
                             <span>{% blocktrans %}Quartas {% endblocktrans %}</span>
                             <br>
-                            <p>{% blocktrans %}Noite{% endblocktrans %}: 6:30pm</p>
-                            <smal>({% blocktrans %}United States (EST){% endblocktrans %})</smal>
+                            <p>{% blocktrans %}Noite{% endblocktrans %}: 6:30pm EST</p>
+                            <smal>({% blocktrans %}United States{% endblocktrans %})</smal>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="col-schedule">
                             <span>{% blocktrans %}Sextas {% endblocktrans %}</span>
                             <br>
-                            <p>{% blocktrans %}Noite{% endblocktrans %}: 6:30pm</p>
-                            <smal>({% blocktrans %}United States (EST){% endblocktrans %})</smal>
+                            <p>{% blocktrans %}Noite{% endblocktrans %}: 6:30pm EST</p>
+                            <smal>({% blocktrans %}United States{% endblocktrans %})</smal>
                         </div><br><br>
                     </div>
                     <div class="col-md-3"></div>
