--- a/html/templates/email/basic-template-bcc.html
+++ b/html/templates/email/basic-template-bcc.html
@@ -9,7 +9,7 @@
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
     <a href="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/" style="text-decoration: none;">
-        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="55" style="float: left;margin: 11px 0 0 0;"/><span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #3C3E77;font-family: sans-serif;float: left;">VOI </span><span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #DC3438;font-family: sans-serif;float: left;">SERVICES</span>
+        <span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #3C3E77;font-family: sans-serif;float: left;">VOI </span><span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #DC3438;font-family: sans-serif;float: left;">SERVICES</span>
     </a>
     <div style="float: left; width: 97%; background: #eee; padding: 10px 20px 20px 20px;">
         <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Prezado(a)" %}</p>
