--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -265,7 +265,7 @@
               </div>
               <div class="form-group col-md-12"><br><br>
                   <button type="submit" id="send-btn" class="btn btn-primary"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
-                  <a href="{% url 'product_stock' %}"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
+                  <a href="{% url 'product_stock' %}"><i class="fas fa-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
               </div>
             </form>
         </div>
