--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -89,7 +89,7 @@
           </div>
           <div class="bs-example col-md-12" id="alerta-valor-minimo">
              <div class="alert alert-warning">
-                 <p><strong>{% trans "Importante" %}!!</strong> {% trans "Para os produtos listados abaixo, você deve cadastrar como <strong>&quot;FROM&quot;</strong> na Amazon o seguinte endereço" %}:<br>
+                 <p><strong>{% trans "Importante" %}!!</strong> {% blocktrans %}Para os produtos listados abaixo, você deve cadastrar como <strong>&quot;FROM&quot;</strong> na Amazon o seguinte endereço{% endblocktrans %}:<br>
                      <br>
                      {% if filter_values.collaborator %}
                       {{ filter_values.collaborator.address_1 }}
