--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -43,8 +43,7 @@
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <span class="logo-services fr">VOI </span><br>
-                    <span class="logo-services">Services</span>
+                    <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -115,7 +114,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            {% trans "<a href='/pt/termos-e-condicoes-de-uso/'>Termos e Condições de Uso" %}</a>
+                            <a href=https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
