--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -96,7 +96,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            {% trans "<a href='/pt/termos-e-condicoes-de-uso/'>Termos e Condições de Uso" %}</a>
+                            <a href=https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
