ajuste de merge e ajuste do arquivo de traduções.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -509,7 +509,7 @@
                     <p>{% trans "Veja abaixo nosso endereço:" %}</p>
                     <p>{% trans "1 Lafayette Rd - Building 1, Door E (Loading Dock), Hampton, New Hampshire, 03842" %}</p>
                     <p><strong>{% trans "Não esqueça de colocar o seu código de cliente ao lado do seu nome no from." %}</strong></p>
-                    <p>{% blocktrans %}Para maiores informações, <a href='https://voiservices.com/en/terms/' class='download'>leia nossos termos{% endblocktrans %}</a></p>
+                    <p>{% blocktrans %}Para maiores informações, <a href='https://voiservices.com/en/terms/' class='download'>leia nossos termos</a>{% endblocktrans %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
