--- a/html/templates/subscriber_return.html
+++ b/html/templates/subscriber_return.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="box-resposta">
                     <p class="text-danger"><i class="fa fa-times-circle fa-3x"></i></p>
-                    <p class="titulo text-danger">{% trans "Sua Assinatura NÃO foi ativada</p>
+                    <p class="titulo text-danger">{% trans "Sua Assinatura NÃO foi ativada" %}</p>
                     <p class="text-info">{% trans "Em caso de dúvidas, entre em contato com o suporte pelo email" %} support@voiservices.com</p>
                     <p><a href="{% url 'user_edit' %}"><i class="fa fa-link"></i> {% trans "Voltar à tela do seu cadastro" %}</a> </p><br>
                 </div>
