--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -492,7 +492,7 @@
                     </div>
                     <div class="col-md-5">
                         <hr /><br>
-                        <p>{% trans "<a href=https://voiservices.com/en/terms/' target="_blank" class='download'>Click here</a> and read our terms of service" %}</p>
+                        <p>{% trans "<a href='https://voiservices.com/en/terms/' target='_blank' class='download'>Click here</a> and read our terms of service" %}</p>
                     <br><hr>
                     </div>
                     <div class="col-md-12">
@@ -566,7 +566,7 @@
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href=https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
+                            <a href='https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
