--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -80,7 +80,7 @@
                    {% url 'terms' as terms_url %}
                    {% timezone mytz %}
                     {% blocktrans with lot_create_date=lot.create_date|date:'SHORT_DATE_FORMAT' %}
-                    <strong>Importante!</strong> É imprescindível que o usuário realize a sua própria análise antes de finalizar a compra. As informações abaixo utilizam ferramentas automatizadas para a inserção dos valores, passíveis de variações. Caso tenha dúvidas, leia nossos termos <a href="{{ terms_url }}"><strong>Clicando aqui</strong></a>.
+                    <strong>Importante!</strong> É imprescindível que o usuário realize a sua própria análise antes de finalizar a compra. As informações abaixo utilizam ferramentas automatizadas para a inserção dos valores, passíveis de variações. Caso tenha dúvidas, leia nossos termos <a href="http://voiservices.com/en/terms/"><strong>Clicando aqui</strong></a>.
                     {% endblocktrans %}
                    {% endtimezone %}
                  </div>
